# mdr-metadata

./: Cargo.toml  README.md
libmdrmeta/: Cargo.toml
libmdrmeta/src/: common.rs  lib.rs  metadata.rs  metav1.rs  metav2.rs
libmdrmeta/tests/: meta.rs  metav1.rs
mdr-meta/: Cargo.toml  Makefile
mdr-meta/src/: main.rs
mdr-meta/tests/: cli.rs
src/: lib.rs  main.rs  metatoml.rs  types.rs
tests/inputs/: .gitignore  MDR_00000002.json  MDR_00000002.toml  MDR_00004423.toml  MDR_00004438.toml  bad.toml  example.toml  example_with_errors.toml  truncated.json
tests/outputs/: MDR_00000002.json  MDR_00000002.toml
