[package]
name = "libmdrmeta"
version = "0.1.0"
edition = "2024"
description = "MDRepo metadata"
license = "BSD-3-Clause"
repository = "https://github.com/TravisWheelerLab/mdr-metadata"
authors = [
    "Ken Youens-Clark <kyclark@arizona.edu>"
]

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
