[package]
name = "libmdrmeta"
version = "0.1.0"
edition = "2024"
description = "MDRepo metadata"
license = "BSD-3-Clause"
repository = "https://github.com/TravisWheelerLab/mdr-metadata"
authors = [
    "Ken Youens-Clark <kyclark@arizona.edu>"
]

#[lib]
#name = "libmdrmeta"
## "cdylib" is necessary to produce a shared library for Python to import from.
#crate-type = ["cdylib"]

#[dependencies.pyo3]
#version = "0.24.0"
#features = ["abi3-py38"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.42"
dateparser = "0.2.1"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
