[package]
name = "mdr-meta"
version = "0.1.0"
edition = "2024"
description = "MDRepo metadata TOML"
license = "BSD-3-Clause"
repository = "https://github.com/TravisWheelerLab/mdr-metadata"
authors = [
    "Ken Youens-Clark <kyclark@arizona.edu>"
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.44", features = ["derive"] }
libmdrmeta = { path = "../libmdrmeta", version = "0.1.0" }
multimap = "0.10.1"
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.2"
